--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "topthink/framework": "^5.0",
-        "topthink/think-testing": "^1.0",
-        "gaoming13/wechat-php-sdk": "1.*"
+        "topthink/think-testing": "^1.0"
     },
     "extra": {
         "think-path": "thinkphp"
